[gd_scene load_steps=13 format=2]

[ext_resource path="res://suspension.png" type="Texture" id=1]
[ext_resource path="res://list.png" type="Texture" id=2]
[ext_resource path="res://weight.png" type="Texture" id=3]
[ext_resource path="res://Scripts/SHMSpringAnimator.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=9]
override_oversampling = 20.0
font_path = "res://Fonts/WorkSans-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=5]
size = 120
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.501961, 0.756863, 0.843137, 1 )
border_width_bottom = 5
border_color = Color( 0.337255, 0.568627, 0.607843, 1 )
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFontData" id=1]
override_oversampling = 20.0
font_path = "res://Fonts/Lora-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=3]
size = 100
outline_color = Color( 0.235294, 0.388235, 0.501961, 1 )
font_data = SubResource( 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 244.86

[sub_resource type="DynamicFontData" id=10]
override_oversampling = 20.0
font_path = "res://Fonts/WorkSans-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=8]
size = 45
font_data = SubResource( 10 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -3224, -937 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.858824, 0.858824, 0.858824, 1 )

[node name="Experiment" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 4 )

[node name="Weight" type="TextureRect" parent="Experiment"]
anchor_left = -17.5
anchor_top = -31.5
anchor_right = 18.375
anchor_bottom = 32.5
margin_left = 103.0
margin_top = 1237.0
margin_right = -820.0
margin_bottom = -811.0
rect_pivot_offset = Vector2( 256, 0 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Experiment/Weight"]
anchor_left = 0.5
anchor_top = 0.162
anchor_right = 0.5
anchor_bottom = 0.162
margin_left = -110.0
margin_top = 175.056
margin_right = 117.0
margin_bottom = 315.856
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "10 g"

[node name="Spring" type="TextureRect" parent="Experiment"]
anchor_left = -17.5
anchor_top = -31.35
anchor_right = 18.375
anchor_bottom = 32.5
margin_left = -164.0
margin_top = 336.0
margin_right = -1087.0
margin_bottom = -1706.0
rect_scale = Vector2( 2, 1 )
texture = ExtResource( 1 )

[node name="WeightPosition" type="Control" parent="Experiment/Spring"]
anchor_left = 0.51
anchor_top = 0.953
anchor_right = 0.51
anchor_bottom = 0.953
margin_left = -91.12
margin_top = -27.936
margin_right = -91.12
margin_bottom = -27.936

[node name="Tools" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1952.0
margin_bottom = 15.0
custom_styles/panel = SubResource( 2 )

[node name="Title" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2396.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -582.0
margin_top = 15.0
margin_right = 585.0
margin_bottom = 143.0
custom_colors/font_color = Color( 0, 0.145098, 0.376471, 1 )
custom_constants/shadow_offset_x = 310
custom_fonts/font = SubResource( 3 )
text = "Spring In SHM"
align = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Title"]
position = Vector2( 22, 6 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
shape = SubResource( 4 )

[node name="EditableValues" type="VBoxContainer" parent="."]
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 763.0
margin_top = 330.88
margin_right = -272.0
margin_bottom = -811.0

[node name="MassSlider" type="HSlider" parent="EditableValues"]
margin_right = 405.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
min_value = 0.01
max_value = 2.0
step = 0.01
value = 0.01

[node name="ParameterName" type="Label" parent="EditableValues/MassSlider"]
margin_left = 405.0
margin_top = 6.0
margin_right = 672.0
margin_bottom = 58.8
custom_colors/font_color = Color( 0.113725, 0.309804, 0.498039, 1 )
custom_fonts/font = SubResource( 8 )
text = "Adjust Mass"

[node name="ParameterValue" type="Label" parent="EditableValues/MassSlider"]
margin_left = -148.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.113725, 0.309804, 0.498039, 1 )
custom_fonts/font = SubResource( 8 )
text = "0.01"

[node name="SpringConstantSlider" type="HSlider" parent="EditableValues"]
margin_top = 68.0
margin_right = 405.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 64 )
min_value = 1.0
max_value = 50.0
value = 1.0

[node name="ParameterName" type="Label" parent="EditableValues/SpringConstantSlider"]
margin_left = 405.0
margin_top = 6.0
margin_right = 672.0
margin_bottom = 58.8
custom_colors/font_color = Color( 0.113725, 0.309804, 0.498039, 1 )
custom_fonts/font = SubResource( 8 )
text = "Adjust SK"

[node name="ParameterValue" type="Label" parent="EditableValues/SpringConstantSlider"]
margin_left = -148.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.113725, 0.309804, 0.498039, 1 )
custom_fonts/font = SubResource( 8 )
text = "10.0"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 800, 1359 )
current = true
zoom = Vector2( 3, 3 )

[node name="GraphEdit" type="GraphEdit" parent="."]
margin_left = 1521.0
margin_top = 318.0
margin_right = 2769.0
margin_bottom = 1476.0
scroll_offset = Vector2( -40, -40 )

[node name="GraphNode" type="GraphNode" parent="GraphEdit"]
margin_left = 40.0
margin_top = 40.0
margin_right = 241.0
margin_bottom = 240.0
mouse_filter = 1

[connection signal="value_changed" from="EditableValues/MassSlider" to="Experiment" method="_on_MassSlider_value_changed"]
[connection signal="value_changed" from="EditableValues/SpringConstantSlider" to="Experiment" method="_on_SpringConstantSlider_value_changed"]
